samples/_failures_safe/1761659033_c83e52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c357f98f.c: In function ‘main’:
./samples/SAFE/__tmp_c357f98f.c:148:12: error: missing terminating " character
  148 |     printf("Vector 2: (
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_c357f98f.c:148:5: error: expected expression at end of input
  148 |     printf("Vector 2: (
      |     ^~~~~~
./samples/SAFE/__tmp_c357f98f.c:148:5: error: expected declaration or statement at end of input
